<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Settings">
        <CheckBoxPreference android:key="checkbox"
            android:title="Checkbox Preference" android:summary="Check it on, check it off" />
        <CheckBoxPreference android:key="checkbox2"
            android:title="Checkbox Preference" android:summary="Check it on, check it off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference android:title="@string/privacy" android:summary="" android:key="privacyPolicy" />
        <Preference android:title="@string/terms" android:summary="" android:key="termsOfService" />
        <Preference android:title="@string/version" android:summary="@string/versionNumber" android:enabled="false" />
    </PreferenceCategory>
</PreferenceScreen>