<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgrepeat"
    android:padding="10sp" >

    <TableRow >

        <ImageButton
            android:id="@+id/caption_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="onClickNoteButton"
            android:src="@xml/caption_button" />

        <ImageButton
            android:id="@+id/audio_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="onClickAudioButton"
            android:src="@xml/audio_button" />
    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/caption"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/audio"
            android:textColor="#000000"
            android:textStyle="bold" />
    </TableRow>

    <TableRow >

        <ImageButton
            android:id="@+id/photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="onClickPhotoButton"
            android:src="@xml/photo_button" />

        <ImageButton
            android:id="@+id/video"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="onClickVideoButton"
            android:src="@xml/video_button" />
    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/photo"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/video"
            android:textColor="#000000"
            android:textStyle="bold" />
    </TableRow>

    <TableRow >

        <ImageButton
            android:id="@+id/reminder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="onClickReminderButton"
            android:src="@xml/reminder_button" />

        <ImageButton
            android:id="@+id/event"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="onClickEventButton"
            android:src="@xml/event_button" />
    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reminder"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/event"
            android:textColor="#000000"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>