<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bgrepeat"
	android:padding="10sp">

	<ImageView android:src="@drawable/menu_logo" android:id="@+id/menu_logo"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" android:paddingBottom="10sp" />

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<TableRow>
			<ImageButton android:id="@+id/imprint" android:src="@xml/imprint_button"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_weight="1"
				android:background="@null" android:paddingBottom="10sp" />
			<ImageButton android:id="@+id/search" android:src="@xml/search_button"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_weight="1"
				android:background="@null" android:paddingBottom="10sp" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/imprint" android:textColor="#000000"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center" android:layout_weight="1"
				android:textStyle="bold" android:paddingBottom="20sp" />
			<TextView android:text="@string/search" android:textColor="#000000"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center" android:layout_weight="1"
				android:textStyle="bold" android:paddingBottom="20sp" />
		</TableRow>

		<TableRow>
			<ImageButton android:id="@+id/friends" android:src="@xml/friends_button"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_weight="1"
				android:background="@null" android:paddingBottom="10sp" />
			<ImageButton android:id="@+id/deals" android:src="@xml/deals_button"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:layout_weight="1"
				android:background="@null" android:paddingBottom="10sp" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/friends" android:textColor="#000000"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center" android:layout_weight="1"
				android:textStyle="bold" android:paddingBottom="20sp" />
			<TextView android:text="@string/deals" android:textColor="#000000"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center" android:layout_weight="1"
				android:textStyle="bold" android:paddingBottom="20sp" />
		</TableRow>

		<View android:layout_height="2dip" android:background="#FF909090" />

		<TextView android:text="Latest Update" />
	</TableLayout>

</LinearLayout>